--- a/src/app/layout/homepage/homepage.component.html
+++ b/src/app/layout/homepage/homepage.component.html
@@ -215,7 +215,7 @@
 <div class="container popular-group">
     <div class="row mb-2">
         <div class="col-lg-12">
-            <h5 class="subtitle-popular-group">Popular Group</h5>
+            <h5 class="subtitle-popular-group">Popular Groups</h5>
             <span class="tagline-popular-group">Where the beauty TALK are</span>
             <span class="float-right see-more pr-5">See More ></span>
         </div>
@@ -303,8 +303,8 @@
 <div class="container trending-product">
     <div class="row mb-2">
         <div class="col-lg-12">
-            <h5 class="subtitle-trending-product">Latest Video</h5>
-            <span class="tagline-trending-product">Watch and leard, ladies</span>
+            <h5 class="subtitle-trending-product">Trending This Week</h5>
+            <span class="tagline-trending-product">See our weekly most reviewed products</span>
         </div>
     </div>
     <div class="row">
