fix display video

--- a/src/app/layout/homepage/homepage.component.html
+++ b/src/app/layout/homepage/homepage.component.html
@@ -268,7 +268,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 d-none">
             <youtube-player
                 videoId     ="fuuxdx9QA1k"
                 (ready)     ="savePlayer($event)"
